Fix alignment in Buy more shares chart

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -803,8 +803,6 @@ p {
             .shares-chart {
                 position: absolute;
                 top: 260px;
-                left: 50%;
-                transform: translateX(-50%);
             }
         }
 
